// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskPasswordInput When close mask input icon should contain slash 1`] = `
<Container
  className="p-0"
  fluid={false}
>
  <ForwardRef
    className="m-0 p-0"
    noGutters={false}
  >
    <Col
      className="p-0 MaskPasswordInput__input"
    >
      <FormControl
        maskiconprops={Object {}}
        type="text"
      />
    </Col>
    <Col
      className="p-0 MaskPasswordInput__mask"
    >
      <Button
        active={false}
        className="MaskPasswordInput__mask__btn"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant=""
      >
        <i
          className="fas fa-eye text-white"
        />
      </Button>
    </Col>
  </ForwardRef>
</Container>
`;

exports[`MaskPasswordInput When open mask input icon should contain slash 1`] = `
<Container
  className="p-0"
  fluid={false}
>
  <ForwardRef
    className="m-0 p-0"
    noGutters={false}
  >
    <Col
      className="p-0 MaskPasswordInput__input"
    >
      <FormControl
        maskiconprops={Object {}}
        type="password"
      />
    </Col>
    <Col
      className="p-0 MaskPasswordInput__mask"
    >
      <Button
        active={false}
        className="MaskPasswordInput__mask__btn"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant=""
      >
        <i
          className="fas fa-eye-slash text-white"
        />
      </Button>
    </Col>
  </ForwardRef>
</Container>
`;
